Solucionado incidencia ruta audio

--- a/carrera.html
+++ b/carrera.html
@@ -21,7 +21,7 @@
             <p><img src="img/fondoCarreraWeb.jpg" alt="fondoCarreraWeb"></p>
             <p id="autor"></p>
             <audio controls>
-                <source src="/mp3/audioCar.mp3" type="audio/mp3">
+                <source src="mp3/audioCar.mp3" type="audio/mp3">
                 Your browser does not support the audio element.
               </audio>
         </div> <!-- portada -->
